@@ -1831,8 +1831,8 @@ public class ClassReader {
             break;
         case 'B': // pointer to CONSTANT_Byte
             av.visit(name,
-                    new Byte((byte) readInt(items[readUnsignedShort(v)])));
-            v += 2;
+            	     Byte.valueOf((byte) readInt(items[readUnsignedShort(v)])));
+           v += 2;
             break;
         case 'Z': // pointer to CONSTANT_Boolean
             av.visit(name,
@@ -1841,13 +1841,13 @@ public class ClassReader {
             v += 2;
             break;
         case 'S': // pointer to CONSTANT_Short
-            av.visit(name, new Short(
-                    (short) readInt(items[readUnsignedShort(v)])));
+            av.visit(name, 
+        	     Short.valueOf((short) readInt(items[readUnsignedShort(v)])));
             v += 2;
             break;
         case 'C': // pointer to CONSTANT_Char
-            av.visit(name, new Character(
-                    (char) readInt(items[readUnsignedShort(v)])));
+            av.visit(name, 
+            	     Character.valueOf((char) readInt(items[readUnsignedShort(v)])));
             v += 2;
             break;
         case 's': // pointer to CONSTANT_Utf8
